--- a/client/views/user/register.html
+++ b/client/views/user/register.html
@@ -1,17 +1,22 @@
 <template name="userRegister">
   <form id="form-register" action="post">
     <div class="form-field">
+      <label for="name">Nome</label>
+      <input type="text" name="name" id="name" required>
+    </div>
+
+    <div class="form-field">
       <label for="email">E-mail</label>
-      <input type="email" id="account-email">
+      <input type="email" name="email" id="email" required>
     </div>
 
     <div class="form-field">
       <label for="password">Senha</label>
-      <input type="password" id="account-password">
+      <input type="password" name="password" id="password" required>
     </div>
 
     <div class="form-submit">
-      <input type="submit" id="create-account" value="Registrar">
+      <input type="submit" value="Registrar">
     </div>
   </form>
 </template>
