Altering template userProfile to show type

--- a/client/views/user/profile.html
+++ b/client/views/user/profile.html
@@ -3,7 +3,7 @@
 
   <p>
     <strong>Nome</strong>: {{ user.profile.name }} <br>
-    <strong>Tipo</strong>: {{ user.profile.type }} <br>
+    <strong>Tipo</strong>: {{ user.profile.type.name }} <br>
     <strong>E-mail</strong>: {{ user.emails.[0].address }}
   </p>
 </template>
