Updating views for user

--- a/client/views/user/login.html
+++ b/client/views/user/login.html
@@ -1,5 +1,5 @@
 <template name="userLogin">
-  <form id="form-login" action="post">
+  <form id="user-login" action="post">
     <div class="form-field">
       <label for="email">E-mail</label>
       <input type="email" name="email" id="email" required>
