--- a/client/views/user/register.html
+++ b/client/views/user/register.html
@@ -1,5 +1,5 @@
 <template name="userRegister">
-  <form id="form-register" action="post">
+  <form id="user-register" action="post">
     <div class="form-field">
       <label for="name">Nome</label>
       <input type="text" name="name" id="name" required>
