Adding autofocus on inputs

--- a/client/views/city/edit.html
+++ b/client/views/city/edit.html
@@ -4,7 +4,7 @@
   <form id="city-edit" action="post">
     <div class="form-field">
       <label for="name">Nome</label>
-      <input type="text" id="name" name="name" placeholder="{{city.name}}" required>
+      <input type="text" id="name" name="name" placeholder="{{city.name}}" required autofocus>
     </div>
 
     <div class="form-submit">
