--- a/client/views/user/login.html
+++ b/client/views/user/login.html
@@ -2,7 +2,7 @@
   <form id="user-login" action="post">
     <div class="form-field">
       <label for="email">E-mail</label>
-      <input type="email" name="email" id="email" required>
+      <input type="email" name="email" id="email" required autofocus>
     </div>
 
     <div class="form-field">
