--- a/client/views/user/recovery.html
+++ b/client/views/user/recovery.html
@@ -3,7 +3,7 @@
     <form id="user-recovery" action="post">
       <div class="form-field">
         <label for="password">Nova senha</label>
-        <input type="text" name="password" id="password" required>
+        <input type="text" name="password" id="password" required autofocus>
       </div>
 
       <div class="form-submit">
@@ -14,7 +14,7 @@
     <form id="user-recovery-send" action="post">
       <div class="form-field">
         <label for="email">E-mail</label>
-        <input type="email" name="email" id="email" required>
+        <input type="email" name="email" id="email" required autofocus>
       </div>
 
       <div class="form-submit">
