--- a/client/views/user/register.html
+++ b/client/views/user/register.html
@@ -2,7 +2,7 @@
   <form id="user-register" action="post">
     <div class="form-field">
       <label for="name">Nome</label>
-      <input type="text" name="name" id="name" required>
+      <input type="text" name="name" id="name" required autofocus>
     </div>
 
     <div class="form-field">
