--- a/client/views/city/create.html
+++ b/client/views/city/create.html
@@ -1,10 +1,10 @@
 <template name="cityCreate">
   <h1>City create</h1>
-  
+
   <form id="city-create" action="post">
     <div class="form-field">
       <label for="name">Nome</label>
-      <input type="text" id="name" name="name" required>
+      <input type="text" id="name" name="name" required autofocus>
     </div>
 
     <div class="form-submit">
