Updating profile user

--- a/client/views/user/profile.html
+++ b/client/views/user/profile.html
@@ -2,8 +2,7 @@
   <h1>Perfil</h1>
 
   <p>
-    <strong>Nome</strong>: {{ user.profile.name }} <br>
-    <strong>Tipo</strong>: {{ user.profile.type.name }} <br>
-    <strong>E-mail</strong>: {{ user.emails.[0].address }}
+    <strong>Nome</strong>: {{ user.name }} <br>
+    <strong>Tipo</strong>: {{ user.type }}
   </p>
 </template>
