Refactoring views for editing

--- a/client/views/city/edit.html
+++ b/client/views/city/edit.html
@@ -22,10 +22,10 @@
   </form>
 
   {{#if city.status}}
-    <a href="#" id="city-status">Desativar</a>
+    <a href="#" class="btn-status">Desativar</a>
   {{else}}
-    <a href="#" id="city-status">Ativar</a>
-
-    <a href="#" id="city-delete">Remover</a>
+    <a href="#" class="btn-status">Ativar</a>
   {{/if}}
+
+  <a href="#" class="btn-delete">Remover</a>
 </template>
