--- a/client/views/state/edit.html
+++ b/client/views/state/edit.html
@@ -17,11 +17,11 @@
     </div>
   </form>
 
-  {{#if state.status}}
-    <a href="#" id="state-status">Desativar</a>
+  {{#if city.status}}
+    <a href="#" class="btn-status">Desativar</a>
   {{else}}
-    <a href="#" id="state-status">Ativar</a>
-
-    <a href="#" id="state-delete">Remover</a>
+    <a href="#" class="btn-status">Ativar</a>
   {{/if}}
+
+  <a href="#" class="btn-delete">Remover</a>
 </template>
