Correcting bug of status for editViews

--- a/client/views/gym/edit.html
+++ b/client/views/gym/edit.html
@@ -32,11 +32,10 @@
     </div>
   </form>
 
-  {{#if city.status}}
+  {{#if gym.status}}
     <a href="#" class="btn-status">Desativar</a>
   {{else}}
     <a href="#" class="btn-status">Ativar</a>
+    <a href="#" class="btn-delete">Remover</a>
   {{/if}}
-
-  <a href="#" class="btn-delete">Remover</a>
 </template>
