--- a/client/views/state/edit.html
+++ b/client/views/state/edit.html
@@ -17,11 +17,10 @@
     </div>
   </form>
 
-  {{#if city.status}}
+  {{#if state.status}}
     <a href="#" class="btn-status">Desativar</a>
   {{else}}
     <a href="#" class="btn-status">Ativar</a>
+    <a href="#" class="btn-delete">Remover</a>
   {{/if}}
-
-  <a href="#" class="btn-delete">Remover</a>
 </template>
