Corrections prospects for editing and creating

--- a/client/views/city/edit.html
+++ b/client/views/city/edit.html
@@ -1,10 +1,10 @@
 <template name="cityEdit">
   <h1>City edit</h1>
 
-  <form id="city-edit" action="post">
+  <form class="form-edit" action="post">
     <div class="form-field">
       <label for="name">Nome</label>
-      <input type="text" id="name" name="name" placeholder="{{city.name}}" required autofocus>
+      <input type="text" id="name" name="name" value="{{city.name}}" required autofocus>
     </div>
 
     <div class="form-field">
