--- a/client/views/gym/create.html
+++ b/client/views/gym/create.html
@@ -1,7 +1,7 @@
 <template name="gymCreate">
   <h1>Gym create</h1>
 
-  <form id="gym-create" action="post">
+  <form class="form-create" action="post">
     <div class="form-field">
       <label for="name">Nome</label>
       <input type="text" id="name" name="name" required autofocus>
