--- a/client/views/state/edit.html
+++ b/client/views/state/edit.html
@@ -1,7 +1,7 @@
 <template name="stateEdit">
   <h1>State edit</h1>
 
-  <form id="state-edit" action="post">
+  <form class="form-edit" action="post">
     <div class="form-field">
       <label for="name">Nome</label>
       <input type="text" id="name" name="name" placeholder="{{state.name}}" required autofocus>
