--- a/client/views/city/create.html
+++ b/client/views/city/create.html
@@ -1,7 +1,7 @@
 <template name="cityCreate">
   <h1>City create</h1>
 
-  <form id="city-create" action="post">
+  <form class="form-create" action="post">
     <div class="form-field">
       <label for="name">Nome</label>
       <input type="text" id="name" name="name" required autofocus>
