--- a/client/views/training/edit.html
+++ b/client/views/training/edit.html
@@ -1,21 +1,31 @@
 <template name="trainingEdit">
   <h1>Training edit</h1>
 
-  <form class="form-create" action="post">
+  <form class="form-edit" action="post">
+    <input type="hidden" id="instructor" name="instructor" value="{{currentUser._id}}">
+
+    <div class="form-field">
+      <label for="description">Descrição</label>
+      <input type="text" name="description" id="description" value="{{training.description}}" required autofocus>
+    </div>
+
     <div class="form-field">
       <label for="practitioner">Praticante</label>
       <select name="practitioner" id="practitioner">
         {{#each practitioners}}
-          <option value="{{_id}}">{{name}}</option>
+          <option value="{{_id}}">{{profile.name}}</option>
         {{/each}}
       </select>
     </div>
 
-    <div class="form-list">
+    <div class="form-field">
+      <label for="routine">Rotinas</label>
+
       {{#each routines}}
-        <a href="/routine/edit/{{_id}}">{{description}}</a>
-      {{else}}
-        <a href="/routine/create">Adicionar rotina</a>
+      <div class="form-checkbox">
+        <input class="routines" type="checkbox" name="routines" id="{{_id}}" value="{{_id}}">
+        <label for="{{_id}}">{{description}}</label>
+      </div>
       {{/each}}
     </div>
 
