translating views for pt-BR

--- a/client/views/exercise/edit.html
+++ b/client/views/exercise/edit.html
@@ -1,5 +1,5 @@
 <template name="exerciseEdit">
-  <h1>Exercise edit</h1>
+  <h1>Alterar exercício</h1>
 
   <form class="form-edit" action="post">
     <div class="form-field">
