--- a/client/views/muscle/create.html
+++ b/client/views/muscle/create.html
@@ -1,5 +1,5 @@
 <template name="muscleCreate">
-  <h1>Muscle create</h1>
+  <h1>Novo músculo</h1>
 
   <form class="form-create" action="post">
     <div class="form-field">
