--- a/client/views/muscle/edit.html
+++ b/client/views/muscle/edit.html
@@ -1,5 +1,5 @@
 <template name="muscleEdit">
-  <h1>Muscle edit</h1>
+  <h1>Alterar músculo</h1>
 
   <form class="form-edit" action="post">
     <div class="form-field">
