--- a/client/views/prop/create.html
+++ b/client/views/prop/create.html
@@ -1,5 +1,5 @@
 <template name="propCreate">
-  <h1>Prop create</h1>
+  <h1>Novo adereço/equipamento</h1>
 
   <form class="form-create" action="post">
     <div class="form-field">
