--- a/client/views/prop/edit.html
+++ b/client/views/prop/edit.html
@@ -1,5 +1,5 @@
 <template name="propEdit">
-  <h1>Prop edit</h1>
+  <h1>Alterar adereço/equipamento</h1>
 
   <form class="form-edit" action="post">
     <div class="form-field">
