--- a/client/views/routine/edit.html
+++ b/client/views/routine/edit.html
@@ -1,5 +1,5 @@
 <template name="routineEdit">
-  <h1>Routine edit</h1>
+  <h1>Alterar rotina</h1>
 
   <form class="form-edit" action="post">
     <div class="form-field">
