--- a/client/views/routine_exercise/create.html
+++ b/client/views/routine_exercise/create.html
@@ -1,5 +1,5 @@
 <template name="routineExerciseCreate">
-  <h1>Routine exercise create</h1>
+  <h1>Nova rotina de exercício</h1>
 
   <form class="form-create" action="post">
     <div class="form-field">
