--- a/client/views/routine_exercise/edit.html
+++ b/client/views/routine_exercise/edit.html
@@ -1,5 +1,5 @@
 <template name="routineExerciseEdit">
-  <h1>Routine exercise edit</h1>
+  <h1>Alterar rotina de exercício</h1>
 
   <form class="form-edit" action="post">
     <div class="form-field">
