--- a/client/views/training/create.html
+++ b/client/views/training/create.html
@@ -1,5 +1,5 @@
 <template name="trainingCreate">
-  <h1>Training create</h1>
+  <h1>Novo treinamento</h1>
 
   <form class="form-create" action="post">
     <input type="hidden" id="instructor" name="instructor" value="{{currentUser._id}}">
