--- a/client/views/training/edit.html
+++ b/client/views/training/edit.html
@@ -1,5 +1,5 @@
 <template name="trainingEdit">
-  <h1>Training edit</h1>
+  <h1>Alterar treinamento</h1>
 
   <form class="form-edit" action="post">
     <input type="hidden" id="instructor" name="instructor" value="{{currentUser._id}}">
