--- a/client/views/user/login.html
+++ b/client/views/user/login.html
@@ -1,4 +1,6 @@
 <template name="userLogin">
+  <h1>Entrar</h1>
+
   <form id="user-login" action="post">
     <div class="form-field">
       <label for="email">E-mail</label>
