--- a/client/views/user/recovery.html
+++ b/client/views/user/recovery.html
@@ -1,4 +1,6 @@
 <template name="userRecovery">
+  <h1>Recuperar senha</h1>  
+
   {{#if resetPassword}}
     <form id="user-recovery" action="post">
       <div class="form-field">
