--- a/client/views/user/register.html
+++ b/client/views/user/register.html
@@ -1,4 +1,6 @@
 <template name="userRegister">
+  <h1>Registrar-se</h1>
+
   <form id="user-register" action="post">
     <div class="form-field">
       <label for="name">Nome</label>
