--- a/client/views/exercise/create.html
+++ b/client/views/exercise/create.html
@@ -1,5 +1,5 @@
 <template name="exerciseCreate">
-  <h1>Exercise create</h1>
+  <h1>Novo exercício</h1>
 
   <form class="form-create" action="post">
     <div class="form-field">
