--- a/client/views/routine/create.html
+++ b/client/views/routine/create.html
@@ -1,5 +1,5 @@
 <template name="routineCreate">
-  <h1>Routine create</h1>
+  <h1>Nova rotina</h1>
 
   <form class="form-create" action="post">
     <div class="form-field">
