--- a/client/views/routine_exercise/index.html
+++ b/client/views/routine_exercise/index.html
@@ -1,5 +1,5 @@
 <template name="routineExercise">
-  <h1>Routine Exercises</h1>
+  <h1>Rotinas de exercícios</h1>
 
   <a href="/routine-exercise/create">Adicionar</a>
 
