--- a/client/views/muscle/create.html
+++ b/client/views/muscle/create.html
@@ -1,14 +1,14 @@
 <template name="muscleCreate">
   <h1>Novo músculo</h1>
 
-  <form class="form-create" action="post">
-    <div class="form-field">
-      <label for="name">Nome</label>
-      <input type="text" id="name" name="name" required autofocus>
+  <form class="form form--create" action="post">
+    <div class="form__field">
+      <label class="form__label" for="name">Nome</label>
+      <input class="form__input" type="text" id="name" name="name" required autofocus>
     </div>
 
-    <div class="form-submit">
-      <input type="submit" value="Cadastrar">
+    <div class="form__submit">
+      <input class="btn form__btn" type="submit" value="Cadastrar">
     </div>
   </form>
 </template>
