--- a/client/views/routine/create.html
+++ b/client/views/routine/create.html
@@ -1,14 +1,14 @@
 <template name="routineCreate">
   <h1>Nova rotina</h1>
 
-  <form class="form-create" action="post">
-    <div class="form-field">
-      <label for="description">Descrição</label>
-      <input type="text" name="description" id="description" required>
+  <form class="form form--create" action="post">
+    <div class="form__field">
+      <label class="form__label" for="description">Descrição</label>
+      <input class="form__input" type="text" name="description" id="description" required>
     </div>
 
-    <div class="form-submit">
-      <input type="submit" value="Cadastrar">
+    <div class="form__submit">
+      <input class="btn form__btn" type="submit" value="Cadastrar">
     </div>
   </form>
 </template>
