--- a/client/views/routine/edit.html
+++ b/client/views/routine/edit.html
@@ -1,21 +1,21 @@
 <template name="routineEdit">
   <h1>Alterar rotina</h1>
 
-  <form class="form-edit" action="post">
-    <div class="form-field">
-      <label for="description">Descrição</label>
-      <input type="text" name="description" id="description" value="{{routine.description}}" required>
+  <form class="form form--edit" action="post">
+    <div class="form__field">
+      <label class="form__label" for="description">Descrição</label>
+      <input class="form__input" type="text" name="description" id="description" value="{{routine.description}}" required>
     </div>
 
-    <div class="form-submit">
-      <input type="submit" value="Atualizar">
+    <div class="form__submit">
+      <input class="btn form__btn" type="submit" value="Atualizar">
     </div>
   </form>
 
   {{#if routine.status}}
-    <a href="#" class="btn-status">Desativar</a>
+    <a href="#" class="btn--status">Desativar</a>
   {{else}}
-    <a href="#" class="btn-status">Ativar</a>
-    <a href="#" class="btn-delete">Remover</a>
+    <a href="#" class="btn--status">Ativar</a>
+    <a href="#" class="btn--delete">Remover</a>
   {{/if}}
 </template>
