--- a/client/views/user/recovery.html
+++ b/client/views/user/recovery.html
@@ -1,26 +1,26 @@
 <template name="userRecovery">
-  <h1>Recuperar senha</h1>  
+  <h1>Recuperar senha</h1>
 
   {{#if resetPassword}}
-    <form id="user-recovery" action="post">
-      <div class="form-field">
-        <label for="password">Nova senha</label>
-        <input type="text" name="password" id="password" required autofocus>
+    <form class="form form--recovery" action="post">
+      <div class="form__field">
+        <label class="form__label" for="password">Nova senha</label>
+        <input class="form__input" type="text" name="password" id="password" required autofocus>
       </div>
 
-      <div class="form-submit">
-        <input type="submit" value="Trocar senha">
+      <div class="form__submit">
+        <input class="btn form__btn" type="submit" value="Trocar senha">
       </div>
     </form>
   {{else}}
-    <form id="user-recovery-send" action="post">
-      <div class="form-field">
-        <label for="email">E-mail</label>
-        <input type="email" name="email" id="email" required autofocus>
+    <form class="form form--send" action="post">
+      <div class="form__field">
+        <label class="form__label" for="email">E-mail</label>
+        <input class="form__input" type="email" name="email" id="email" required autofocus>
       </div>
 
-      <div class="form-submit">
-        <input type="submit" value="Enviar instruções">
+      <div class="form__submit">
+        <input class="btn form__btn" type="submit" value="Enviar instruções">
       </div>
     </form>
   {{/if}}
