Correcting erros on view exercise

--- a/client/views/exercise/create.html
+++ b/client/views/exercise/create.html
@@ -21,7 +21,7 @@
 
       {{#each muscles}}
       <div class="form-checkbox">
-        <input class="form-checkbox__input" class="muscles" type="checkbox" name="muscle" id="{{_id}}" value="{{_id}}">
+        <input class="form-checkbox__input muscles" type="checkbox" name="muscle" id="{{_id}}" value="{{_id}}">
         <label class="form-checkbox__label" for="{{_id}}">{{name}}</label>
       </div>
       {{/each}}
