--- a/client/views/training/create.html
+++ b/client/views/training/create.html
@@ -1,25 +1,31 @@
 <template name="trainingCreate">
-  <h1>Novo treinamento</h1>
+  <header class="header">
+    <h1 class="header__title">Novo treinamento</h1>
 
-  <form class="form form--create" action="post">
-    <input type="hidden" id="instructor" name="instructor" value="{{currentUser._id}}">
+    <a class="nav__btn nav--back ion-android-arrow-back" href="#"></a>
+  </header>
 
-    <div class="form__field">
-      <label class="form__label" for="description">Descrição</label>
-      <input class="form__input" type="text" name="description" id="description" required autofocus>
-    </div>
+  <main class="main">
+    <form class="form form--create" action="post">
+      <input type="hidden" id="instructor" name="instructor" value="{{currentUser._id}}">
 
-    <div class="form__field">
-      <label class="form__label" for="practitioner">Praticante</label>
-      <select class="form__select" name="practitioner" id="practitioner">
-        {{#each practitioners}}
-          <option value="{{_id}}">{{profile.name}}</option>
-        {{/each}}
-      </select>
-    </div>
+      <div class="form__field">
+        <label class="form__label" for="description">Descrição</label>
+        <input class="form__input" type="text" name="description" id="description" required autofocus>
+      </div>
 
-    <div class="form__submit">
-      <input class="btn form__btn" type="submit" value="Cadastrar">
-    </div>
-  </form>
+      <div class="form__field">
+        <label class="form__label" for="practitioner">Praticante</label>
+        <select class="form__select" name="practitioner" id="practitioner">
+          {{#each practitioners}}
+            <option value="{{_id}}">{{profile.name}}</option>
+          {{/each}}
+        </select>
+      </div>
+
+      <div class="form__submit">
+        <input class="btn form__btn" type="submit" value="Cadastrar">
+      </div>
+    </form>
+  </main>
 </template>
