--- a/client/views/user/register.html
+++ b/client/views/user/register.html
@@ -1,24 +1,30 @@
 <template name="userRegister">
-  <h1>Registrar-se</h1>
+  <header class="header">
+    <h1 class="header__title">Registrar-se</h1>
+  </header>
 
-  <form class="form form--register" action="post">
-    <div class="form__field">
-      <label class="form__label" for="name">Nome</label>
-      <input class="form__input" type="text" name="name" id="name" required autofocus>
-    </div>
+  <main class="main">
+    <form class="form form--register" action="post">
+      <div class="form__field">
+        <label class="form__label" for="name">Nome</label>
+        <input class="form__input" type="text" name="name" id="name" required autofocus>
+      </div>
 
-    <div class="form__field">
-      <label class="form__label" for="email">E-mail</label>
-      <input class="form__input" type="email" name="email" id="email" required>
-    </div>
+      <div class="form__field">
+        <label class="form__label" for="email">E-mail</label>
+        <input class="form__input" type="email" name="email" id="email" required>
+      </div>
 
-    <div class="form__field">
-      <label class="form__label" for="password">Senha</label>
-      <input class="form__input" type="password" name="password" id="password" required>
-    </div>
+      <div class="form__field">
+        <label class="form__label" for="password">Senha</label>
+        <input class="form__input" type="password" name="password" id="password" required>
+      </div>
 
-    <div class="form__submit">
-      <input class="btn form__btn" type="submit" value="Registrar">
-    </div>
-  </form>
+      <div class="form__submit">
+        <input class="btn form__btn" type="submit" value="Registrar">
+      </div>
+    </form>
+
+    <a class="btn btn--full" href="/login">Entrar</a>
+  </main>
 </template>
