--- a/client/views/application/layout.html
+++ b/client/views/application/layout.html
@@ -1,13 +1,10 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 </head>
 
 <template name="layout">
-  <header class="header">
-    {{> header}}
-  </header>
-
-  <main class="main">
+  <div>
     {{> yield}}
-  </main>
+  </div>
 </template>
