--- a/client/views/exercise/create.html
+++ b/client/views/exercise/create.html
@@ -1,34 +1,40 @@
 <template name="exerciseCreate">
-  <h1>Novo exercício</h1>
+  <header class="header">
+    <h1 class="header__title">Novo exercício</h1>
 
-  <form class="form form--create" action="post">
-    <div class="form__field">
-      <label class="form__label" for="name">Nome</label>
-      <input class="form__input" type="text" id="name" name="name" required autofocus>
-    </div>
+    <a class="nav__btn nav--back ion-android-arrow-back" href="#"></a>
+  </header>
 
-    <div class="form__field">
-      <label class="form__label" for="prop">Adereço/Equipamento</label>
-      <select class="form__select" name="prop" id="prop">
-        {{#each props}}
-          <option value="{{_id}}">{{name}}</option>
-        {{/each}}
-      </select>
-    </div>
-
-    <div class="form__field">
-      <label class="form__label" for="muscles">Músculo</label>
-
-      {{#each muscles}}
-      <div class="form-checkbox">
-        <input class="form-checkbox__input muscles" type="checkbox" name="muscle" id="{{_id}}" value="{{_id}}">
-        <label class="form-checkbox__label" for="{{_id}}">{{name}}</label>
+  <main class="main">
+    <form class="form form--create" action="post">
+      <div class="form__field">
+        <label class="form__label" for="name">Nome</label>
+        <input class="form__input" type="text" id="name" name="name" required autofocus>
       </div>
-      {{/each}}
-    </div>
 
-    <div class="form__submit">
-      <input class="btn form__btn" type="submit" value="Cadastrar">
-    </div>
-  </form>
+      <div class="form__field">
+        <label class="form__label" for="prop">Adereço/Equipamento</label>
+        <select class="form__select" name="prop" id="prop">
+          {{#each props}}
+            <option value="{{_id}}">{{name}}</option>
+          {{/each}}
+        </select>
+      </div>
+
+      <div class="form__field">
+        <label class="form__label" for="muscles">Músculo</label>
+
+        {{#each muscles}}
+        <div class="form-checkbox">
+          <input class="form-checkbox__input muscles" type="checkbox" name="muscle" id="{{_id}}" value="{{_id}}">
+          <label class="form-checkbox__label" for="{{_id}}">{{name}}</label>
+        </div>
+        {{/each}}
+      </div>
+
+      <div class="form__submit">
+        <input class="btn form__btn" type="submit" value="Cadastrar">
+      </div>
+    </form>
+  </main>
 </template>
