--- a/client/views/exercise/edit.html
+++ b/client/views/exercise/edit.html
@@ -1,41 +1,59 @@
 <template name="exerciseEdit">
-  <h1>Alterar exercício</h1>
+  <header class="header">
+    <h1 class="header__title">Alterar exercício</h1>
 
-  <form class="form form--edit" action="post">
-    <div class="form__field">
-      <label class="form__label" for="name">Nome</label>
-      <input class="form__input" type="text" id="name" name="name" value="{{exercise.name}}" required autofocus>
-    </div>
+    <a class="nav__btn nav--back ion-android-arrow-back" href="#"></a>
+    <a class="nav__btn nav--open ion-android-more-vertical" href="#"></a>
 
-    <div class="form__field">
-      <label class="form__label" for="prop">Adereço/Equipamento</label>
-      <select class="form__select" name="prop" id="prop">
-        {{#each props}}
-          <option value="{{_id}}">{{name}}</option>
+    <nav class="nav">
+      <ul class="nav__list">
+        {{#if exercise.status}}
+          <li class="nav__item">
+            <a class="nav__link btn--status" href="#">Desativar</a>
+          </li>
+        {{else}}
+          <li class="nav__item">
+            <a class="nav__link btn--status" href="#">Ativar</a>
+          </li>
+
+          <li class="nav__item">
+            <a class="nav__link btn--delete" href="#">Remover</a>
+          </li>
+        {{/if}}
+      </ul>
+    </nav>
+  </header>
+
+  <main class="main">
+    <form class="form form--edit" action="post">
+      <div class="form__field">
+        <label class="form__label" for="name">Nome</label>
+        <input class="form__input" type="text" id="name" name="name" value="{{exercise.name}}" required autofocus>
+      </div>
+
+      <div class="form__field">
+        <label class="form__label" for="prop">Adereço/Equipamento</label>
+        <select class="form__select" name="prop" id="prop">
+          {{#each props}}
+            <option value="{{_id}}">{{name}}</option>
+          {{/each}}
+        </select>
+      </div>
+
+      <div class="form__field">
+        <label class="form__label" for="muscles">Músculo</label>
+
+        {{#each muscles}}
+          <div class="form-checkbox">
+            <input class="form-checkbox__input muscles" type="checkbox" name="muscle" id="{{_id}}" value="{{_id}}">
+            <label class="form-checkbox__label" for="{{_id}}">{{name}}</label>
+          </div>
         {{/each}}
-      </select>
-    </div>
+      </div>
 
-    <div class="form__field">
-      <label class="form__label" for="muscles">Músculo</label>
-
-      {{#each muscles}}
-        <div class="form-checkbox">
-          <input class="form-checkbox__input muscles" type="checkbox" name="muscle" id="{{_id}}" value="{{_id}}">
-          <label class="form-checkbox__label" for="{{_id}}">{{name}}</label>
-        </div>
-      {{/each}}
-    </div>
-
-    <div class="form__submit">
-      <input class="btn form__btn" type="submit" value="Atualizar">
-    </div>
-  </form>
-
-  {{#if exercise.status}}
-    <a href="#" class="btn--status">Desativar</a>
-  {{else}}
-    <a href="#" class="btn--status">Ativar</a>
-    <a href="#" class="btn--delete">Remover</a>
-  {{/if}}
+      <div class="form__submit">
+        <input class="btn form__btn" type="submit" value="Atualizar">
+      </div>
+    </form>
+  </main>
 </template>
