--- a/client/views/muscle/edit.html
+++ b/client/views/muscle/edit.html
@@ -1,21 +1,39 @@
 <template name="muscleEdit">
-  <h1>Alterar músculo</h1>
+  <header class="header">
+    <h1 class="header__title">Alterar músculo</h1>
 
-  <form class="form form--edit" action="post">
-    <div class="form__field">
-      <label class="form__label" for="name">Nome</label>
-      <input class="form__input" type="text" id="name" name="name" value="{{muscle.name}}" required autofocus>
-    </div>
+    <a class="nav__btn nav--back ion-android-arrow-back" href="#"></a>
+    <a class="nav__btn nav--open ion-android-more-vertical" href="#"></a>
 
-    <div class="form__submit">
-      <input class="btn form__btn" type="submit" value="Atualizar">
-    </div>
-  </form>
+    <nav class="nav">
+      <ul class="nav__list">
+        {{#if muscle.status}}
+          <li class="nav__item">
+            <a class="nav__link btn--status" href="#">Desativar</a>
+          </li>
+        {{else}}
+          <li class="nav__item">
+            <a class="nav__link btn--status" href="#">Ativar</a>
+          </li>
 
-  {{#if muscle.status}}
-    <a href="#" class="btn--status">Desativar</a>
-  {{else}}
-    <a href="#" class="btn--status">Ativar</a>
-    <a href="#" class="btn--delete">Remover</a>
-  {{/if}}
+          <li class="nav__item">
+            <a class="nav__link btn--delete" href="#">Remover</a>
+          </li>
+        {{/if}}
+      </ul>
+    </nav>
+  </header>
+
+  <main class="main">
+    <form class="form form--edit" action="post">
+      <div class="form__field">
+        <label class="form__label" for="name">Nome</label>
+        <input class="form__input" type="text" id="name" name="name" value="{{muscle.name}}" required autofocus>
+      </div>
+
+      <div class="form__submit">
+        <input class="btn form__btn" type="submit" value="Atualizar">
+      </div>
+    </form>
+  </main>
 </template>
