--- a/client/views/prop/index.html
+++ b/client/views/prop/index.html
@@ -1,15 +1,28 @@
 <template name="prop">
-  <h1>Novo adereço/equipamento</h1>
+  <header class="header">
+    <h1 class="header__title">Adereços/equipamentos</h1>
 
-  <a href="/prop/create">Adicionar</a>
+    <a class="nav__btn nav--back ion-android-arrow-back" href="#"></a>
+    <a class="nav__btn nav--open ion-android-more-vertical" href="#"></a>
 
-  <ul>
-    {{#each props}}
-    <li>
-      <a class="{{checkStatus status}}" href="/prop/edit/{{_id}}">
-        {{name}}
-      </a>
-    </li>
-    {{/each}}
-  </ul>
+    <nav class="nav">
+      <ul class="nav__list">
+        <li class="nav__item">
+          <a class="nav__link" href="/prop/create">Adicionar</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+
+  <main class="main">
+    <ul class="list">
+      {{#each props}}
+      <li class="list__item">
+        <a class="list__link {{checkStatus status}}" href="/prop/edit/{{_id}}">
+          {{name}}
+        </a>
+      </li>
+      {{/each}}
+    </ul>
+  </main>
 </template>
