--- a/client/views/routine_exercise/create.html
+++ b/client/views/routine_exercise/create.html
@@ -1,30 +1,36 @@
 <template name="routineExerciseCreate">
-  <h1>Rotinas de exercício para {{routine.description}}</h1>
+  <header class="header">
+    <h1 class="header__title">Exercícios para rotina {{routine.description}}</h1>
 
-  <form class="form form--create" action="post">
-    <input type="hidden" id="routine" name="routine" value="{{routine._id}}">
+    <a class="nav__btn nav--back ion-android-arrow-back" href="#"></a>
+  </header>
 
-    <div class="form__field">
-      <label class="form__label" for="name">Exercício</label>
-      <select class="form__select" name="exercise" id="exercise" required autofocus>
-        {{#each exercises}}
-          <option value="{{_id}}">{{name}}</option>
-        {{/each}}
-      </select>
-    </div>
+  <main class="main">
+    <form class="form form--create" action="post">
+      <input type="hidden" id="routine" name="routine" value="{{routine._id}}">
 
-    <div class="form__field">
-      <label class="form__label" for="sets">Séries</label>
-      <input class="form__input" type="number" id="sets" name="sets" required>
-    </div>
+      <div class="form__field">
+        <label class="form__label" for="name">Exercício</label>
+        <select class="form__select" name="exercise" id="exercise" required autofocus>
+          {{#each exercises}}
+            <option value="{{_id}}">{{name}}</option>
+          {{/each}}
+        </select>
+      </div>
 
-    <div class="form__field">
-      <label class="form__label" for="reps">Repetições</label>
-      <input class="form__input" type="number" id="reps" name="reps" required>
-    </div>
+      <div class="form__field">
+        <label class="form__label" for="sets">Séries</label>
+        <input class="form__input" type="number" id="sets" name="sets" required>
+      </div>
 
-    <div class="form__submit">
-      <input class="btn form__btn" type="submit" value="Cadastrar">
-    </div>
-  </form>
+      <div class="form__field">
+        <label class="form__label" for="reps">Repetições</label>
+        <input class="form__input" type="number" id="reps" name="reps" required>
+      </div>
+
+      <div class="form__submit">
+        <input class="btn form__btn" type="submit" value="Cadastrar">
+      </div>
+    </form>
+  </main>
 </template>
