--- a/client/views/routine_exercise/edit.html
+++ b/client/views/routine_exercise/edit.html
@@ -1,35 +1,53 @@
 <template name="routineExerciseEdit">
-  <h1>Alterar rotina de exercício</h1>
+  <header class="header">
+    <h1 class="header__title">Alterar rotina do exercício</h1>
 
-  <form class="form form--edit" action="post">
-    <div class="form__field">
-      <label class="form__label" for="name">Nome</label>
-      <select class="form__select" name="exercise" id="exercise" required autofocus>
-        {{#each exercises}}
-          <option value="{{_id}}">{{name}}</option>
-        {{/each}}
-      </select>
-    </div>
+    <a class="nav__btn nav--back ion-android-arrow-back" href="#"></a>
+    <a class="nav__btn nav--open ion-android-more-vertical" href="#"></a>
 
-    <div class="form__field">
-      <label class="form__label" for="sets">Séries</label>
-      <input class="form__input" type="number" id="sets" name="sets" value="{{routineExercise.sets}}" required>
-    </div>
+    <nav class="nav">
+      <ul class="nav__list">
+        {{#if routineExercise.status}}
+          <li class="nav__item">
+            <a class="nav__link btn--status" href="#">Desativar</a>
+          </li>
+        {{else}}
+          <li class="nav__item">
+            <a class="nav__link btn--status" href="#">Ativar</a>
+          </li>
 
-    <div class="form__field">
-      <label class="form__label" for="reps">Repetições</label>
-      <input class="form__input" type="number" id="reps" name="reps" value="{{routineExercise.reps}}" required>
-    </div>
+          <li class="nav__item">
+            <a class="nav__link btn--delete" href="#">Remover</a>
+          </li>
+        {{/if}}
+      </ul>
+    </nav>
+  </header>
 
-    <div class="form__submit">
-      <input class="btn form__btn" type="submit" value="Atualizar">
-    </div>
-  </form>
+  <main class="main">
+    <form class="form form--edit" action="post">
+      <div class="form__field">
+        <label class="form__label" for="name">Nome</label>
+        <select class="form__select" name="exercise" id="exercise" required autofocus>
+          {{#each exercises}}
+            <option value="{{_id}}">{{name}}</option>
+          {{/each}}
+        </select>
+      </div>
 
-  {{#if routineExercise.status}}
-    <a href="#" class="btn--status">Desativar</a>
-  {{else}}
-    <a href="#" class="btn--status">Ativar</a>
-    <a href="#" class="btn--delete">Remover</a>
-  {{/if}}
+      <div class="form__field">
+        <label class="form__label" for="sets">Séries</label>
+        <input class="form__input" type="number" id="sets" name="sets" value="{{routineExercise.sets}}" required>
+      </div>
+
+      <div class="form__field">
+        <label class="form__label" for="reps">Repetições</label>
+        <input class="form__input" type="number" id="reps" name="reps" value="{{routineExercise.reps}}" required>
+      </div>
+
+      <div class="form__submit">
+        <input class="btn form__btn" type="submit" value="Atualizar">
+      </div>
+    </form>
+  </main>
 </template>
