--- a/client/views/training/edit.html
+++ b/client/views/training/edit.html
@@ -1,32 +1,50 @@
 <template name="trainingEdit">
-  <h1>Alterar treinamento</h1>
+  <header class="header">
+    <h1 class="header__title">Alterar treinamento</h1>
 
-  <form class="form form--edit" action="post">
-    <input type="hidden" id="instructor" name="instructor" value="{{currentUser._id}}">
+    <a class="nav__btn nav--back ion-android-arrow-back" href="#"></a>
+    <a class="nav__btn nav--open ion-android-more-vertical" href="#"></a>
 
-    <div class="form__field">
-      <label class="form__label" for="description">Descrição</label>
-      <input class="form__input" type="text" name="description" id="description" value="{{training.description}}" required autofocus>
-    </div>
+    <nav class="nav">
+      <ul class="nav__list">
+        {{#if training.status}}
+          <li class="nav__item">
+            <a class="nav__link btn--status" href="#">Desativar</a>
+          </li>
+        {{else}}
+          <li class="nav__item">
+            <a class="nav__link btn--status" href="#">Ativar</a>
+          </li>
 
-    <div class="form__field">
-      <label class="form__label" for="practitioner">Praticante</label>
-      <select class="form__select" name="practitioner" id="practitioner">
-        {{#each practitioners}}
-          <option value="{{_id}}">{{profile.name}}</option>
-        {{/each}}
-      </select>
-    </div>
+          <li class="nav__item">
+            <a class="nav__link btn--delete" href="#">Remover</a>
+          </li>
+        {{/if}}
+      </ul>
+    </nav>
+  </header>
 
-    <div class="form__submit">
-      <input class="btn form__btn" type="submit" value="Atualizar">
-    </div>
-  </form>
+  <main class="main">
+    <form class="form form--edit" action="post">
+      <input type="hidden" id="instructor" name="instructor" value="{{currentUser._id}}">
 
-  {{#if training.status}}
-    <a href="#" class="btn--status">Desativar</a>
-  {{else}}
-    <a href="#" class="btn--status">Ativar</a>
-    <a href="#" class="btn--delete">Remover</a>
-  {{/if}}
+      <div class="form__field">
+        <label class="form__label" for="description">Descrição</label>
+        <input class="form__input" type="text" name="description" id="description" value="{{training.description}}" required autofocus>
+      </div>
+
+      <div class="form__field">
+        <label class="form__label" for="practitioner">Praticante</label>
+        <select class="form__select" name="practitioner" id="practitioner">
+          {{#each practitioners}}
+            <option value="{{_id}}">{{profile.name}}</option>
+          {{/each}}
+        </select>
+      </div>
+
+      <div class="form__submit">
+        <input class="btn form__btn" type="submit" value="Atualizar">
+      </div>
+    </form>
+  </main>
 </template>
