--- a/client/views/training/index.html
+++ b/client/views/training/index.html
@@ -1,17 +1,31 @@
 <template name="training">
-  <h1>Treinamentos</h1>
+  <header class="header">
+    <h1 class="header__title">Treinamentos</h1>
 
-  {{#if admin}}
-    <a href="/training/create">Adicionar</a>
-  {{/if}}
+    <a class="nav__btn nav--back ion-android-arrow-back" href="#"></a>
 
-  <ul>
-    {{#each trainings}}
-    <li>
-      <a class="{{checkStatus status}}" href="/training/show/{{_id}}">
-        {{practitionerObj.profile.name}} - {{description}}
-      </a>
-    </li>
-    {{/each}}
-  </ul>
+    {{#if admin}}
+    <a class="nav__btn nav--open ion-android-more-vertical" href="#"></a>
+
+    <nav class="nav">
+      <ul class="nav__list">
+        <li class="nav__item">
+          <a class="nav__link" href="/training/create">Adicionar</a>
+        </li>
+      </ul>
+    </nav>
+    {{/if}}
+  </header>
+
+  <main class="main">
+    <ul class="list">
+      {{#each trainings}}
+      <li class="list__item">
+        <a class="list__link {{checkStatus status}}" href="/training/show/{{_id}}">
+          {{description}}
+        </a>
+      </li>
+      {{/each}}
+    </ul>
+  </main>
 </template>
