--- a/client/views/user/profile.html
+++ b/client/views/user/profile.html
@@ -1,8 +1,17 @@
 <template name="userProfile">
-  <h1>Perfil</h1>
+  <header class="header">
+    <h1 class="header__title">Perfil</h1>
+  </header>
 
-  <p>
-    <strong>Nome</strong>: {{ user.name }} <br>
-    <strong>Tipo</strong>: {{ user.type }}
-  </p>
+  <main class="main">
+    <section class="section">
+      <h2 class="section__title">{{ user.name }}</h2>
+
+      <div class="section__text">
+        <p>
+          <strong>Tipo</strong>: {{ user.type }}
+        </p>
+      </div>
+    </section>
+  </main>
 </template>
